# pytest-xprocess

./: .gitignore  .hgignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  RELEASING.rst  _internal.py  appveyor.yml  issue_template.md  pyproject.toml  pytest_xprocess.py  setup.cfg  setup.py  tox.ini  xprocess.py
.github/: issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: main.yml
docs/source/: changes.rst  command_line_options.rst  conf.py  contact.rst  contributing.rst  index.rst  info.rst  starter.rst
example/: server-multiprocess.py  server.py  test_server.py
requirements/: dev.in  dev.txt  tests.txt
tests/: conftest.py  server.py  skip_test_functional_workflow.py  test_callback.py  test_functional_workflow.py  test_interruption_clean_up.py  test_multiple_servers.py  test_process_initialization.py  test_process_termination.py  test_resource_cleanup.py  test_startup_timeout.py
xprocess/: __init__.py  pytest_xprocess.py  xprocess.py
