[metadata]
name = pytest-xprocess
author = Holger Krekel
author_email = holger@merlinux.eu
license = MIT
license_files = LICENSE
url = https://github.com/pytest-dev/pytest-xprocess/
version = 0.13.1
long_description = file: README.rst
description = A pytest plugin for managing processes across test runs.
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
install_requires=
    pytest>=2.8
    psutil
setup_requires=
    setuptools_scm
py_modules=
    pytest_xprocess
    xprocess

[options.entry_points]
pytest11 =
    xprocess = pytest_xprocess
