[metadata]
name = pytest-xprocess
author = Holger Krekel
author_email = holger@merlinux.eu
license = MIT
license_files = LICENSE
url = https://github.com/pytest-dev/pytest-xprocess/
version = 0.13.1
long_description = file: README.rst
description = A pytest plugin for managing processes across test runs.
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[bdist_wheel]
universal = 1

[options]
install_requires=
    pytest>=2.8
    psutil
setup_requires=
    setuptools_scm
py_modules=
    pytest_xprocess
    xprocess

[options.entry_points]
pytest11 =
    xprocess = pytest_xprocess

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# E203 = slice notation whitespace, invalid
# E501 = line length, handled by bugbear B950
# E722 = bare except, handled by bugbear B001
# W503 = bin op line break, invalid
select = B, E, F, W, B9
ignore =
    E203
    E501
    E722
    W503
max-line-length = 80
